// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductEmbeddedCard/> Should render a product card 1`] = `
<div
  class="genericCard card"
>
  <div
    class="card-body"
  >
    <div
      class="cardContainer container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <img
            alt="product"
            class="productImage"
            src="string"
          />
        </div>
        <div
          class="col"
        >
          <div
            class="row"
          >
            <strong>
              Tandem washing machine
            </strong>
          </div>
          <div
            class="row"
          >
            <div>
              <span
                class="starRatingWrapper"
              />
              <span
                class="totalReviews"
              >
                (
                100
                )
              </span>
            </div>
          </div>
        </div>
        <div
          class="chevronButton col"
        >
          <i
            class="material-icons"
          >
            unfold_more
          </i>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="collapse"
          >
            <table>
              <tbody>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Description:
                  </td>
                  <th>
                    economic washing machine
                  </th>
                </tr>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Product page:
                  </td>
                  <th>
                    <a
                      href="www.yotpo.com/product/GGGGG"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      www.yotpo.com/product/GGGGG
                    </a>
                  </th>
                </tr>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Category:
                  </td>
                  <th>
                    <div
                      class="badge upperCase"
                    >
                      electronics
                    </div>
                  </th>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductEmbeddedCard/> Should render a product card 2`] = `
<div
  class="genericCard card"
>
  <div
    class="card-body"
  >
    <div
      class="cardContainer container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <img
            alt="product"
            class="productImage"
            src="test-file-stub"
          />
        </div>
        <div
          class="col"
        >
          <div
            class="row"
          >
            <strong>
              Tandem washing machine
            </strong>
          </div>
          <div
            class="row"
          >
            <div>
              <span
                class="starRatingWrapper"
              />
              <span
                class="totalReviews"
              >
                (
                100
                )
              </span>
            </div>
          </div>
        </div>
        <div
          class="chevronButton col"
        >
          <i
            class="material-icons"
          >
            unfold_more
          </i>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="collapse"
          >
            <table>
              <tbody>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Description:
                  </td>
                  <th>
                    economic washing machine
                  </th>
                </tr>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Product page:
                  </td>
                  <th>
                    <a
                      href="www.yotpo.com/product/GGGGG"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      www.yotpo.com/product/GGGGG
                    </a>
                  </th>
                </tr>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Category:
                  </td>
                  <th>
                    <div
                      class="badge upperCase"
                    >
                      electronics
                    </div>
                  </th>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductEmbeddedCard/> Should render a product card 3`] = `
<div
  class="genericCard card"
>
  <div
    class="card-body"
  >
    <div
      class="cardContainer container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <img
            alt="product"
            class="productImage"
            src="test-file-stub"
          />
        </div>
        <div
          class="col"
        >
          <div
            class="row"
          >
            <strong>
              Tandem washing machine
            </strong>
          </div>
          <div
            class="row"
          >
            <div>
              <span
                class="starRatingWrapper"
              />
              <span
                class="totalReviews"
              >
                (
                100
                )
              </span>
            </div>
          </div>
        </div>
        <div
          class="chevronButton col"
        >
          <i
            class="material-icons"
          >
            unfold_more
          </i>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="collapse"
          >
            <table>
              <tbody>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Description:
                  </td>
                  <th>
                    economic washing machine
                  </th>
                </tr>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Product page:
                  </td>
                  <th>
                    <a
                      href="www.yotpo.com/product/GGGGG"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      www.yotpo.com/product/GGGGG
                    </a>
                  </th>
                </tr>
                <tr>
                  <td
                    class="cardDetail"
                  >
                    Category:
                  </td>
                  <th>
                    <div
                      class="badge upperCase"
                    >
                      electronics
                    </div>
                  </th>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
